<resources>
    <string name="app_name">FastMoney</string>
    <!-- Strings used for registration page -->
    <string name="register_username_label">Username: </string>
    <string name="register_username_field">Enter username: </string>
    <string name="register_email_label">Email: </string>
    <string name="register_email_field">Enter email: </string>
    <string name="register_button">Register</string>
    <string name="register_username_alphanumeric_error">Please use only letters and numbers in your username</string>
    <string name="register_username_missing_error">Please enter a value for your username</string>
    <string name="unknown_error">Unknown error</string>
    <string name="register_email_missing_error">Please enter a value for the email address</string>
    <string name="register_email_format_error">Please enter an email with a valid format</string>
    <string name="title_activity_view_user">ViewUser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="passwords">Passwords</string>
    <string name="title_activity_login">activity_login</string>


    <!--font awesome -->
    <string name="icon_briefcase">&#xe800;</string>
    <string name="icon_plusSign">&#xf0fe;</string>
    <string name="icon_chatBubble">&#xf0e6;</string>
    <string name="icon_handshake">&#xf2b5;</string>
</resources>