<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">


    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/register_email_label"
        app:layout_constraintStart_toStartOf="@id/username_error"
        app:layout_constraintTop_toBottomOf="@id/username_error" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/register_username_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_field_layout"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/email_label"
        app:layout_constraintTop_toBottomOf="@+id/email_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_username_field" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field_layout"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/password_label"
        app:layout_constraintTop_toBottomOf="@+id/password_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/register_email_field" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:text="@string/register_button"
        app:layout_constraintStart_toStartOf="@+id/email_error"
        app:layout_constraintTop_toBottomOf="@+id/email_error" />

    <TextView
        android:id="@+id/username_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#F44336"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/username_field_layout"
        app:layout_constraintTop_toBottomOf="@+id/username_field_layout" />

    <TextView
        android:id="@+id/email_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#F44336"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/email_field_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_field_layout" />

    <TextView
        android:id="@+id/existingAccountError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="This account already exists."
        android:textColor="#F44336"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/register_button"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>