<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="#CCFF90"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="@color/color9"
        android:clickable="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:clickable="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:clickable="false"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-black"
                    android:text="Delivery"
                    android:textAllCaps="true"
                    android:textSize="18dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:clickable="false"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:text="1521 Lemarchant Street"
                android:textColor="@color/color9"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85"
        android:background="@color/theme2"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:clickable="false"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Work"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1666666"
            android:background="@color/theme4"
            android:clickable="true"
            android:onClick="redirectToWorkPage">

            <TextView
                android:id="@+id/workIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontello"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/icon_briefcase"
                android:textColor="@color/color2"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="Work"
                android:textAllCaps="true"
                android:textColor="@color/color2"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/workIcon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Hire"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.166666"
            android:background="@color/theme0"
            android:clickable="true"
            android:onClick="redirectToHirePage">

            <TextView
                android:id="@+id/hireIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontello"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/icon_handshake"
                android:textColor="@color/color3"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="Hire"
                android:textAllCaps="true"
                android:textColor="@color/color3"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hireIcon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/addJob"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1666666"
            android:background="@color/theme0"
            android:clickable="true"
            android:onClick="redirectToPostJobPage">

            <TextView
                android:id="@+id/addJobIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontello"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/icon_plusSign"
                android:textColor="@color/color3"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="POST JOB"
                android:textAllCaps="true"
                android:textColor="@color/color3"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addJobIcon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/findJob"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1666666"
            android:background="@color/theme0"
            android:clickable="true"
            android:onClick="redirectToFindJobPage">

            <TextView
                android:id="@+id/findJobIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontello"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/icon_plusSign"
                android:textColor="@color/color3"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="FIND JOB"
                android:textAllCaps="true"
                android:textColor="@color/color3"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/findJobIcon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/Chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.166666666"
            android:background="@color/theme0"
            android:clickable="true">

            <TextView
                android:id="@+id/chatIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontello"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/icon_chatBubble"
                android:textColor="@color/color3"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="Chat"
                android:textAllCaps="true"
                android:textColor="@color/color3"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chatIcon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.16666666"
            android:background="@color/theme0"
            android:clickable="true"
            android:onClick="redirectToProfilePage">

            <TextView
                android:id="@+id/profileIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontello"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/icon_chatBubble"
                android:textColor="@color/color3"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Profile"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:text="Profile"
                android:textAllCaps="true"
                android:textColor="@color/color3"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileIcon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</LinearLayout>